--- a/GreenGardenClient/GreenGardenClient/Views/Common/Login.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Common/Login.cshtml
@@ -165,8 +165,8 @@
                             </div>
 
                             <button type="submit" class="btn btn-primary btn-block">Đăng Nhập</button>
-                            <p class="text-center mt-3"><a href="#">Quên mật khẩu?</a></p>
-                            <p class="text-center">Chưa có tài khoản? <a href="#">Đăng ký</a></p>
+                            <p class="text-center mt-3"><a href="/Common/ResetPassword">Quên mật khẩu?</a></p>
+                            <p class="text-center">Chưa có tài khoản? <a href="/Common/Register">Đăng ký</a></p>
                             @if (ViewData.ModelState != null && ViewData.ModelState.ErrorCount > 0)
                             {
                                 <div style="color:red">
