--- a/GreenGardenClient/GreenGardenClient/Views/Common/ResetPassword.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Common/ResetPassword.cshtml
@@ -135,7 +135,7 @@
                     <!-- Phía bên trái: Logo hoặc hình ảnh -->
                     <div class="col-md-6 d-flex align-items-center justify-content-center">
                         <div class="text-center text-white">
-                            <h1 class="display-4">Chaof mừng đến với chúng tôi</h1>
+                            <h1 class="display-4">Chào mừng đến với chúng tôi</h1>
                         </div>
                     </div>
 
