--- a/GreenGardenClient/GreenGardenClient/Views/Service/Cart.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Service/Cart.cshtml
@@ -227,7 +227,7 @@
                         <button class="btn btn-dark">Quay lại dịch vụ</button>
                         <!-- Remove the existing form's submit button -->
                         <form id="paymentForm" asp-controller="Service" asp-action="Order" method="post">
-                            <button type="button" class="btn btn-dark" onclick="submitPayment()">Thanh toán</button>
+                            <button type="button" class="btn btn-dark" onclick="submitPayment()">Đặt ngay </button>
                         </form>
 
 
